WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99981
[Qt] Fix build without QtWidgets
https://bugs.webkit.org/show_bug.cgi?id=99981
Summary
[Qt] Fix build without QtWidgets
Simon Hausmann
Reported
2012-10-22 05:21:27 PDT
[Qt] Fix build without QtWidgets
Attachments
Patch
(4.20 KB, patch)
2012-10-22 05:23 PDT
,
Simon Hausmann
vestbo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Hausmann
Comment 1
2012-10-22 05:23:01 PDT
Created
attachment 169881
[details]
Patch
Tor Arne Vestbø
Comment 2
2012-10-22 05:30:47 PDT
Comment on
attachment 169881
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=169881&action=review
r with minor comment
> Source/WebKit2/WebProcess.pro:17 > +!isEmpty(QT.widgets.name): QT += widgets
haveQtModule() ?
Simon Hausmann
Comment 3
2012-10-22 06:36:31 PDT
Committed
r132066
: <
http://trac.webkit.org/changeset/132066
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug