[Qt] Fix build without QtWidgets https://bugs.webkit.org/show_bug.cgi?id=99981

Reviewed by Tor Arne Vestbø.

Source/WebKit/qt:

Remove dependency to QtWidgets that is not needed here anymore since
the removal of the QtQuick1 code.

* declarative/experimental/experimental.pri:
* declarative/public.pri:

Source/WebKit2:

Make it possible to compile WebProcess without QtWidgets by instantiating a
QGuiApplication instead of a QApplication if we're built without widgets.

* WebProcess.pro:
* qt/MainQt.cpp:
(main):

Canonical link: https://commits.webkit.org/117999@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132066 268f45cc-cd09-0410-ab3c-d52691b4dbfc